@@ -33,6 +33,7 @@
 #include <config.h>
 #include <asm/bootstrap.h>
 #include <service.h>
+#include <sdramboot.h>
 
 #include "hardware.h"
 
@@ -211,9 +212,17 @@ void __naked __section (.bootstrap) initialize_bootstrap (void)
   __asm volatile ("tst %0, #0xf0000000\n\t"
 		  "beq 1f\n\t"
 		  "cmp %0, %1\n\t"
+#if defined (CONFIG_SDRAMBOOT_REPORT)
+		  "movls r0, #1\n\t"
+		  "strls r0, [%2]\n\t"
+#endif
 		  "movls r0, #0\n\t"
 		  "movls pc, %0\n\t"
-		"1:" :: "r" (lr), "i" (SDRAM_BANK1_PHYS));
+		"1:" :: "r" (lr), "i" (SDRAM_BANK1_PHYS)
+#if defined (CONFIG_SDRAMBOOT_REPORT)
+		  , "r" (&fSDRAMBoot) 
+#endif
+		  : "r0" );
 
   PUTC_LL('r');
 
@@ -254,6 +263,11 @@ void __naked __section (.bootstrap) initialize_bootstrap (void)
   EMC_DYNCFG1     = SDRAM_CFG;
   
   PUTC_LL('j');
+
+#if defined (CONFIG_SDRAMBOOT_REPORT)
+  barrier ();
+  fSDRAMBoot = 0;
+#endif
 
   __asm volatile ("mov r0, #-1\t\n"
 		  "mov pc, %0" : : "r" (lr));
