@@ -1,3 +1,10 @@
+2005-09-30  Marc Singer  <elf@buici.com>
+
+	* src/arch-arm/entry/sdramboot.c (sdramboot_report): Unified
+	support for reporting when APEX is booted from SDRAM.  While only
+	informational, this will help explain to new users the difference
+	between booting from flash or SRAM and from SDRAM. 
+
 2005-09-29  Marc Singer  <elf@buici.com>
 
 	* src/apex/env.c: Updated autoboot cancellation message to be more
